--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -18,8 +18,15 @@ dependencies = [
     "uvicorn[standard]>=0.35.0",
 ]
 
-# [project.scripts]
-# kigaprio = "kigaprio:main"
+[dependency-groups]
+dev = [
+    "mypy>=1.18.1",
+    "pytest>=8.4.2",
+    "ruff>=0.13.0",
+    "types-aiofiles>=24.1.0.20250822",
+    "types-pyyaml>=6.0.12.20250915",
+    "types-ujson>=5.10.0.20250822",
+]
 
 [build-system]
 requires = ["uv_build>=0.8.17,<0.9.0"]
@@ -31,7 +38,7 @@ packages = [{include = "kigaprio", from = "src"}]
 [tool.ruff]
 target-version = "py311"
 line-length = 88
-select = [
+lint.select = [
     "E",  # pycodestyle errors
     "W",  # pycodestyle warnings
     "F",  # pyflakes
@@ -40,7 +47,7 @@ select = [
     "C4", # flake8-comprehensions
     "UP", # pyupgrade
 ]
-ignore = [
+lint.ignore = [
     "E501",  # line too long, handled by black
     "B008",  # do not perform function calls in argument defaults
     "C901",  # too complex
@@ -49,10 +56,9 @@ ignore = [
 [tool.ruff.format]
 quote-style = "double"
 indent-style = "space"
-skip-string-normalization = false
 line-ending = "auto"
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"]
 
 [tool.mypy]
