--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
 		"format": "prettier --write .",
 		"format:check": "prettier --check .",
 		"test": "vitest run",
-		"test:watch": "vitest"
+		"test:watch": "vitest",
+		"test:ui": "vitest --ui"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
@@ -27,6 +28,7 @@
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
 		"@tailwindcss/vite": "^4.0.0",
+		"@testing-library/svelte": "^5.2.8",
 		"@types/node": "^20.19.0",
 		"eslint": "^9.22.0",
 		"eslint-config-prettier": "^10.0.1",
