--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,10 +10,11 @@ requires-python = ">=3.9"
 dependencies = [
     "aiofiles>=24.1.0",
     "fastapi>=0.116.1",
+    "httpx>=0.28.1",
     "pandas>=2.3.2",
     "pillow>=11.3.0",
     "pydantic-settings>=2.10.1",
-    "pypdf2>=3.0.1",
+    "pypdf>=6.0.0",
     "python-multipart>=0.0.20",
     "uvicorn[standard]>=0.35.0",
 ]
