--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,6 +10,7 @@ requires-python = ">=3.9"
 dependencies = [
     "aiofiles>=24.1.0",
     "fastapi>=0.116.1",
+    "gunicorn>=23.0.0",
     "httpx>=0.28.1",
     "pandas>=2.3.2",
     "pillow>=11.3.0",
