--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -3,8 +3,8 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile
-      target: development  # Assuming you have a development stage
-    container_name: kigaprio-backend-dev
+      target: development
+    image: kigaprio-backend:dev
     volumes:
       - ./backend/src:/app/src
       - ./backend/pyproject.toml:/app/pyproject.toml
@@ -29,7 +29,7 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
       target: development
-    container_name: kigaprio-frontend-dev
+    image: kigaprio-frontend:dev
     volumes:
       # Mount entire frontend directory for hot reload
       - ./frontend:/app
@@ -44,7 +44,6 @@ services:
 
   db:
     image: postgres:16-alpine
-    container_name: kigaprio-db-dev
     environment:
       - POSTGRES_USER=user
       - POSTGRES_PASSWORD=password
@@ -58,7 +57,6 @@ services:
 
   redis:
     image: redis:7-alpine
-    container_name: kigaprio-redis-dev
     ports:
       - "6379:6379"
     networks:
