--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -29,6 +29,12 @@ dev = [
     "types-pyyaml>=6.0.12.20250915",
     "types-ujson>=5.10.0.20250822",
 ]
+ocr = [
+    "matplotlib>=3.9.4",
+    "opencv-python>=4.12.0.88",
+    "paddleocr[all]>=3.2.0",
+    "paddlepaddle>=3.2.0",
+]
 
 [build-system]
 requires = ["uv_build>=0.8.17,<0.9.0"]
