--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -13,13 +13,11 @@ services:
       - ENV=development
       - DEBUG=true
       - CORS_ORIGINS=http://localhost:5173,http://localhost:8000
-      - DATABASE_URL=${DATABASE_URL:-postgresql://user:password@db:5432/kigaprio}
       - REDIS_URL=${REDIS_URL:-redis://redis:6379}
     ports:
       - "8000:8000"
     command: uv run uvicorn kigaprio.main:app --host 0.0.0.0 --port 8000 --reload
     # depends_on:
-    #   - db
     #   - redis
 
   frontend:
@@ -34,26 +32,46 @@ services:
       - /app/node_modules  # Exclude node_modules from host mount
     environment:
       - PUBLIC_API_URL=http://localhost:8000
+      - PUBLIC_POCKETBASE_URL=http://localhost:8090
       - NODE_ENV=development
     ports:
       - "5173:5173"  # Vite dev server
+    depends_on:
+      - pocketbase
 
-  # db:
-  #   image: postgres:16-alpine
-  #   environment:
-  #     - POSTGRES_USER=user
-  #     - POSTGRES_PASSWORD=password
-  #     - POSTGRES_DB=kigaprio
-  #   volumes:
-  #     - postgres-data-dev:/var/lib/postgresql/data
-  #   ports:
-  #     - "5432:5432"
-  #
+  pocketbase:
+    build:
+      context: ./pocketbase
+      dockerfile: Dockerfile
+      args:
+        - USER_UID=1000
+        - USER_GID=1000
+        - PB_VERSION=0.30.0
+    image: kigaprio-pocketbase
+    restart: unless-stopped
+    ports:
+      - "8090:8090"
+    volumes:
+      - ./pocketbase/pb_data:/pb/pb_data
+      - ./pocketbase/pb_public:/pb/pb_public
+      - ./pocketbase/pb_migrations:/pb/pb_migrations
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8090/api/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    secrets:
+      - pb_admin_email
+      - pb_admin_password
+
   # redis:
   #   image: redis:7-alpine
   #   ports:
   #     - "6379:6379"
 
-# volumes:
-#   postgres-data-dev:
+secrets:
+  pb_admin_email:
+    file: ./.secrets/pb_admin_email
+  pb_admin_password:
+    file: ./.secrets/pb_admin_password
 
