--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
     environment:
       - ENV=production
       - DEBUG=false
+      - PUBLIC_POCKETBASE_URL=http://pocketbase:8090
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.kigaprio-backend.rule=Host(`kiga.dhjd.de`)"
@@ -23,15 +24,15 @@ services:
       - "traefik.http.middlewares.kigaprio-ratelimit.ratelimit.burst=50"
       - "traefik.http.routers.kigaprio-backend.middlewares=kigaprio-ratelimit"
     depends_on:
-      # - db
-      # - redis
+      pocketbase:
+        condition: service_healthy
       frontend-builder:
         condition: service_completed_successfully
     networks:
       - kigaprio-prod
       - proxy
-    ports:
-      - 8000:8000
+    expose:
+      - 8000
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
       interval: 30s
@@ -47,31 +48,54 @@ services:
       target: builder
     image: kigaprio-frontend-builder
     restart: "no"
+    environment:
+      - PUBLIC_API_URL=https://kiga.dhjd.de
+      - PUBLIC_POCKETBASE_URL=https://pb.kiga.dhjd.de
     volumes:
       - frontend-static:/shared/build
     command: sh -c "cp -r /app/build/* /shared/build/"
     networks:
       - kigaprio-prod
 
-  # db:
-  #   image: postgres:16-alpine
-  #   container_name: kigaprio-db
-  #   restart: unless-stopped
-  #   environment:
-  #     - POSTGRES_USER=${DB_USER}
-  #     - POSTGRES_PASSWORD=${DB_PASSWORD}
-  #     - POSTGRES_DB=${DB_NAME}
-  #   volumes:
-  #     - postgres-data:/var/lib/postgresql/data
-  #     - ./backup:/backup  # For database backups
-  #   networks:
-  #     - kigaprio-prod
-  #   healthcheck:
-  #     test: ["CMD-SHELL", "pg_isready -U ${DB_USER}"]
-  #     interval: 10s
-  #     timeout: 5s
-  #     retries: 5
-  #
+  pocketbase:
+    build:
+      context: ./pocketbase
+      dockerfile: Dockerfile
+      args:
+        - USER_UID=1000
+        - USER_GID=1000
+        - PB_VERSION=0.30.0
+    image: kigaprio-pocketbase
+    restart: unless-stopped
+    expose:
+      - 8090
+    volumes:
+      - ./pocketbase/pb_data:/pb/pb_data
+      - ./pocketbase/pb_public:/pb/pb_public
+      - ./pocketbase/pb_migrations:/pb/pb_migrations
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8090/api/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    networks:
+      - kigaprio-prod
+      - proxy
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.kigaprio-backend.rule=Host(`pb.kiga.dhjd.de`)"
+      - "traefik.http.routers.kigaprio-backend.entrypoints=websecure"
+      - "traefik.http.routers.kigaprio-backend.tls=true"
+      - "traefik.http.routers.kigaprio-backend.tls.certresolver=letsencrypt"
+      - "traefik.http.services.kigaprio-backend.loadbalancer.server.port=8090"
+      # Rate limiting
+      - "traefik.http.middlewares.kigaprio-ratelimit.ratelimit.average=100"
+      - "traefik.http.middlewares.kigaprio-ratelimit.ratelimit.burst=50"
+      - "traefik.http.routers.kigaprio-backend.middlewares=kigaprio-ratelimit"
+    secrets:
+      - pb_admin_email
+      - pb_admin_password
+
   # redis:
   #   image: redis:7-alpine
   #   container_name: kigaprio-redis
@@ -87,11 +111,14 @@ services:
   #     timeout: 5s
   #     retries: 5
 
-
 volumes:
-  # postgres-data:
-  # redis-data:
   frontend-static:
+
+secrets:
+  pb_admin_email:
+    file: ./.secrets/pb_admin_email
+  pb_admin_password:
+    file: ./.secrets/pb_admin_password
 
 networks:
   kigaprio-prod:
