--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -93,7 +93,27 @@ jobs:
       env:
         DATABASE_URL: postgresql://user:password@localhost:5432/kigaprio_test
         REDIS_URL: redis://localhost:6379
-
+  frontend-security:
+    name: Frontend Security Audit
+    runs-on: ubuntu-latest
+    
+    steps:
+    - uses: actions/checkout@v4
+    
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20'
+        cache: 'npm'
+        cache-dependency-path: './frontend/package-lock.json'
+    
+    - name: Install dependencies
+      run: npm ci
+      working-directory: ./frontend
+    
+    - name: Run npm audit
+      run: npm audit --audit-level=high
+      working-directory: ./frontend
   frontend-checks:
     name: Frontend Lint & Format
     runs-on: ubuntu-latest
