--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,5 +45,11 @@
 		"typescript-eslint": "^8.20.0",
 		"vite": "^7.0.4",
 		"vitest": "^3.2.4"
+	},
+	"overrides": {
+		"cookie": "^0.7.0"
+	},
+	"dependencies": {
+		"pocketbase": "^0.26.2"
 	}
 }
