--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -14,7 +14,7 @@ services:
       - DEBUG=true
       - CORS_ORIGINS=http://localhost:5173,http://localhost:8000
       - REDIS_URL=${REDIS_URL:-redis://redis:6379}
-      - PUBLIC_POCKETBASE_URL=http://pocketbase:8090
+      - POCKETBASE_URL=http://pocketbase:8090
     ports:
       - "8000:8000"
     command: uv run uvicorn kigaprio.main:app --host 0.0.0.0 --port 8000 --reload
@@ -32,8 +32,6 @@ services:
       - ./frontend:/app
       - /app/node_modules  # Exclude node_modules from host mount
     environment:
-      - PUBLIC_API_URL=http://localhost:8000
-      - PUBLIC_POCKETBASE_URL=http://localhost:8090
       - NODE_ENV=development
       - USE_DEV_HTTPS=false
     ports:
@@ -51,6 +49,8 @@ services:
         - PB_VERSION=0.30.0
     image: kigaprio-pocketbase
     restart: unless-stopped
+    expose:
+      - 8090
     ports:
       - "8090:8090"
     volumes:
@@ -65,11 +65,6 @@ services:
     secrets:
       - pb_admin_email
       - pb_admin_password
-
-  # redis:
-  #   image: redis:7-alpine
-  #   ports:
-  #     - "6379:6379"
 
 secrets:
   pb_admin_email:
