--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,8 +15,10 @@ dependencies = [
     "pandas>=2.3.2",
     "pillow>=11.3.0",
     "pydantic-settings>=2.10.1",
+    "pydantic[email]>=2.11.9",
     "pypdf>=6.0.0",
     "python-multipart>=0.0.20",
+    "redis>=6.4.0",
     "uvicorn[standard]>=0.35.0",
 ]
 
