--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -100,7 +100,7 @@ EXPOSE 8000
 
 # Health check for container orchestration
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
-    CMD curl -f http://localhost:8000/health || exit 1
+    CMD curl -f http://localhost:8000/api/v1/health || exit 1
 
 USER root
 COPY --chown=root:root ./load-secrets.sh /usr/local/bin/load-secrets.sh
