--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -100,17 +100,16 @@ EXPOSE 8000
 
 # Health check for container orchestration
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
-    CMD curl -f http://localhost:8000/health || exit 1
+    CMD curl -f http://localhost:8000/api/v1/health || exit 1
 
+USER root
+COPY --chown=root:root ./load-secrets.sh /usr/local/bin/load-secrets.sh
+RUN chmod +x /usr/local/bin/load-secrets.sh
+USER appuser
+
+ENTRYPOINT ["/usr/local/bin/load-secrets.sh"]
 # Run with gunicorn for production
 CMD ["gunicorn", \
      "kigaprio.main:app", \
-     "--workers", "4", \
-     "--worker-class", "uvicorn.workers.UvicornWorker", \
-     "--bind", "0.0.0.0:8000", \
-     "--timeout", "60", \
-     "--keep-alive", "5", \
-     "--max-requests", "1000", \
-     "--max-requests-jitter", "50", \
-     "--access-logfile", "-", \
-     "--error-logfile", "-"]
+     "--config", \
+     "/app/src/kigaprio/gunicorn_config.py"]
